crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@named_param_assign_expr_after_name.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/named_param_assign_expr_after_name.v
---
lex: Code
prefix: ""
replacement: 59..59
in_decl_name: false
expectations:
  ParameterAssignmentExpr
