crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@named_port_conn_expr_after_name_without_close_paren.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/named_port_conn_expr_after_name_without_close_paren.v
---
lex: Code
prefix: ""
replacement: 49..49
in_decl_name: false
expectations:
  PortConnectionExpr
