crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@non_keyword_ansi_port_decl_name.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/non_keyword_ansi_port_decl_name.v
---
lex: Code
prefix: "b"
replacement: 18..19
in_decl_name: true
expectations:
  DeclName
