crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@param_value_assignment_list.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/param_value_assignment_list.v
---
lex: Code
prefix: ""
replacement: 56..56
in_decl_name: false
expectations:
  ParamValueAssignment
