crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@parameter_port_list.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/parameter_port_list.v
---
lex: Code
prefix: ""
replacement: 11..11
in_decl_name: false
expectations:
  ParameterPortListItem
